fixed card overflow

--- a/aws_portal/frontend/src/index.css
+++ b/aws_portal/frontend/src/index.css
@@ -59,6 +59,9 @@ h1 {
   display: flex;
   flex-direction: column;
   padding: 1.5rem;
+  max-height: calc(calc(100vh - 11rem) - 1px);
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
 .card-row {
